# gargo

./: .gitignore  Cargo.toml  MEMO.md  PLAN_MEMO.md  README.md  TODO.md  build.rs
.github/workflows/: release-on-version-bump.yml
assets/: server_shared.css  server_shortcuts.js
assets/web_editor/: editor.css  editor.html  editor.js  index.html
benches/: server.rs
docs/: README.md
scripts/: build-web-editor.sh
src/: app.rs  cli.rs  config.rs  diff_render.rs  lib.rs  main.rs  project.rs  split_render.rs
src/app/: click.rs  dispatch_app.rs  dispatch_core.rs  expand.rs
src/command/: ai_summary.rs  app_shell.rs  diff_server.rs  gargo_preview_server.rs  gargo_server.rs  git.rs  git_backend.rs  git_index_runtime.rs  git_runtime.rs  github_preview_server.rs  github_server.rs  global_search_index.rs  in_editor_diff.rs  mod.rs  recent_projects.rs  registry.rs  server_shared.rs  web_editor_server.rs  web_editor_theme.rs
src/command/diff_server/: ai_api.rs  compare_api.rs  mod.rs  render.rs  status_api.rs  templates.rs  validation.rs
src/command/gargo_server/: commit_pages.rs  mod.rs  repo_api.rs  util.rs
src/core/: history.rs  macro_rec.rs  markdown_link.rs
src/core/document/: display.rs  editing.rs  expand.rs  file_io.rs  mod.rs  multi_cursor.rs  selection.rs  tests.rs
src/core/editor/: buffer_manager.rs  mod.rs  search.rs  tests.rs  web_dispatch.rs
src/input/: action.rs  key.rs  keymap.rs  mod.rs
src/plugin/: gargo_preview.rs  gargo_server.rs  github_preview.rs  github_server.rs  lsp.rs  mod.rs  registry.rs
src/syntax/: highlight.rs  language.rs  symbol.rs
src/ui/: image.rs  mod.rs
src/wasm/: mod.rs
src/wasm_stubs/: command.rs  syntax.rs
tests/: action_routing_test.rs  backend_oracle.rs  diff_server_e2e.rs  gargo_preview_server_e2e.rs  gargo_server_e2e.rs  github_preview_server_e2e.rs  github_server_e2e.rs  overlay_preview_scroll_e2e.rs  paste_multiline_e2e.rs  test-e2e.sh  web_editor_fs_e2e.rs  web_editor_last_file_e2e.rs
(+37 files in other folders)
