[package]
name = "gargo"
version = "0.1.71"
edition = "2024"

[dependencies]
ropey = "1.6"
crossterm = "0.29"
unicode-width = "0.2"
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
toml = "0.9"
streaming-iterator = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "process", "io-util", "sync", "net", "fs"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
serde_json = "1.0"
comrak = "0.30"
tree-sitter = "0.26"
tree-sitter-language = "0.1"
tree-sitter-rust = "0.24"
tree-sitter-javascript = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-python = "0.25"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-json = "0.24"
tree-sitter-toml-ng = "0.7"
tree-sitter-md = "0.5"
tree-sitter-java = "0.23"
tree-sitter-php = "0.24"
regex = "1"
rusqlite = { version = "0.32", features = ["bundled"] }
url = "2"
gix = { version = "0.78.0", features = ["attributes", "status"], default-features = false }
imara-diff = "0.2.0"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
semver = "1"
tree-sitter-diff = "0.1.0"
tree-sitter-html = "0.23"
tree-sitter-yaml = "0.7"
tree-sitter-xml = "0.7"
tree-sitter-css = "0.25"
tree-sitter-bash = "0.25"
tree-sitter-cpp = "0.23"
tree-sitter-ruby = "0.23"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
ureq = { version = "2", features = ["json"] }

[[bench]]
name = "bench-actions"
path = "benches/actions.rs"
harness = false

[[bench]]
name = "bench-scroll"
path = "benches/scroll.rs"
harness = false

[[bench]]
name = "bench-buffer-picker"
path = "benches/buffer_picker.rs"
harness = false

[[bench]]
name = "bench-long-line"
path = "benches/long_line.rs"
harness = false
